styles.css
* {
    margin: 0;
    padding: 0;
}

body {
    line-height: 1.4;
    font-family: 'Public Sans', sans-serif;
    overflow-x: hidden;
}
.txt-xl{
    font-size: 2.5rem;
}
.txt-l{
    font-size: 1.8rem;
}
/*-----------------------------------------------HEADER SECTION-----------------------------------------*/
header>.container {
    display: flex;
    justify-content: space-between;
    padding: 1rem;
    align-items: center;
}

header {
    position: relative;
    background-color: #fff;
    z-index: 3;
    padding-left: 2.5rem;
    padding-right: 2.5rem;
}
.btn-nav-desktop{
    display: none;
}

img {
    width: 100%;
}


*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    line-height: 1.4;
}
ul{
    list-style: none;
}
.menu{
    background-color: #fff;
}
.menu ul li{
    padding: 1rem;
    font-size: 1.5rem;
    color:#000;
}
.menu li a{
    text-decoration: none;
    transition: color 0.4s ease;
}
.menu-wrap{
position: fixed;
top: 0;
right: 1.3rem;
z-index: 1;
}
.menu-wrap .toggler{
    position: absolute;
    top: 0;
    right: 1.3rem;
    z-index: 2;
    cursor: pointer;
    width: 50px;
    height: 50px;
    opacity: 0;
}
.menu-wrap .hamburger{
    position: absolute;
    top: 0;
    right: 1.3rem;
    z-index: 1;
    width: 60px;
    height: 60px;
    padding: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
}
.menu-wrap .hamburger>div{
    position: relative;
    width: 100%;
    height: 2px;
    background-color: #000;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease;
}
.menu-wrap .hamburger>div::before, .menu-wrap .hamburger>div::after{
content: '';
position: absolute;
z-index: 1;
top: -10px;
width: 100%;
height: 2px;
background:inherit;
}
.menu-wrap .hamburger>div::after{
    top:10px;
}
.menu-wrap .toggler:checked + .hamburger>div{
    transform: rotate(135deg);
}
.menu-wrap .toggler:checked + .hamburger>div::before,
.menu-wrap .toggler:checked + .hamburger>div::after{
    top: 0;
    transform: rotate(90deg);
}
.menu-wrap .toggler:checked:hover + .hamburger>div{
    transform: rotate(225deg);
}
.menu-wrap .menu{
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    visibility: hidden;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}
.menu-wrap .menu>div{
    border-radius: 50%;
    width: 200vw;
    height: 200vw;
    display: flex;
    flex: none;
    align-items: center;
    justify-content:center;
    transform: scale(0);
    transition: all 0.4s ease;
}
.menu-wrap .menu>div>div{
    text-align: center;
    max-width: 90vw;
    max-height: 100vh;
    opacity: 0;
    transition: opacity 0.4s ease;
}
.menu-wrap .toggler:checked ~ .menu{
    visibility: visible;
}
.menu-wrap .toggler:checked ~ .menu>div{
    transform: scale(1);
    transition-duration: 0.2s;
}
.menu-wrap .toggler:checked ~ .menu>div>div{
    opacity: 1;
    transition: opacity 0.4s ease;
}
.nav-desktop{
    display: none;
}

/*-------------------------------------------------SHOWCASE SECTION------------------------------------*/
#showcase {
    
    padding: 0 1rem 1rem 1rem;
    position: relative;
}
.main-img{
    background-image: url('images/bg-intro-mobile.svg');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: 100% 0%;
}
#showcase img {
    transform: translateY(-33%);
    position: relative;
    z-index: 1;
}

.showcase-txt div {
    text-align: center;
    margin-bottom: 1rem;
}

.showcase-txt p {
    margin-bottom: 1rem;
}

button {
    background-color: hsl(136, 65%, 51%);
    padding: 0.7rem 1rem;
    color: #fff;
    border-radius: 1.5rem;
    border: none;
}

/*--------------------------------------------FEATURE SECTION-------------------------------------*/
#feature-section {
    padding: 1rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
    text-align: center;
    background-color: hsla(220, 16%, 96%, 1);
}

.feature>img {
    width: 5rem;
}
.feature-main-txt p{
    margin-bottom: 1rem;
}
/* .feature>img,
.feature>p, */
/* #feature-section>p {
    margin: 1rem 0;
} */
p.feature-desc{
    color:hsl(233, 8%, 62%);
}
p.feature-title{
    font-size: 1.3rem;
    color:#000;
}
.feature p,.feature img{
    margin-bottom:1rem;
}

/*--------------------------------------------ARTICLE SECTION------------------------------------*/
#article-section{
    padding:1rem;
}
#article-section>p{
    text-align: center;
}
.article-desc{
    color: hsl(233, 8%, 62%);
    font-size: 0.8rem;
}
.article small{
    color: hsl(233, 8%, 62%);
    font-size: 0.6rem;
}
#article-section p{
    margin-bottom: 1rem;
}


.social-icons{
    display: flex;
    justify-content: center;
    column-gap: 0.8rem;
    /* background-color: #000; */
}
footer{
    background-color: hsl(233, 26%, 24%);
    color: #fff;
    text-align: center;
}
.page-links a{
    color:#fff;
    text-decoration: none;
}
footer>div{
    margin-bottom: 1rem;
}
.page-links ul li{
    margin-bottom: 0.6rem;
}
.icons>a>img{
    background-color:#fff;
}
.filter-white{
    filter: invert(98%) sepia(32%) saturate(3%) hue-rotate(294deg) brightness(116%) contrast(100%);
}
.icons>a>img{
    /* width: 50%; */
    margin:1.5rem 0;
}
/* .bottom-section>button{
    padding: 0.8rem 1.3rem;
} */
.bottom-section{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding:1rem;
}
.bottom-section button{
    margin-bottom: 1rem;
}

@media(min-width:570px){
    .nav-desktop{
        display: block;
    }
    .btn-nav-desktop{
        display: block;
    }
    .nav-desktop ul{
        display: flex;
        column-gap: 1.5rem;
    }
    .menu-wrap{
        display: none;
    }
    ul li a{
        text-decoration: none;
        color: #000;
    }
    #showcase{
        display: flex;
        /* column-gap: 4.5rem; */
        align-items: center;
    }
    #showcase img{
        transform: translateY(0);
        transform: translateX(20%);
    }
    .main-img{
        order: 1;
        width: 40%;
        background-image: url("images/bg-intro-desktop.svg");
    }
    header>.container{
        padding-left: 3rem;
        padding-right: 3rem;
    }
    .showcase-txt{
        width: 60%;
    }
    .showcase-txt>div{
        width: 65%;
        margin: auto;
    }
    .showcase-txt>div>p{
        text-align: left;
    }
    .showcase-txt>div>.btn-showcase{
        text-align: left;
    }
    .feature-main-txt{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        margin-bottom:2rem;
    }
    .feature-main-txt p{
        width:50%;
        text-align: left;
        margin-bottom: 1rem;
    }
    
    /* #feature-section>p{
        text-align: left;
    } */
    .feature-container{
        width:80%;
        margin: auto;
    }
    .feature{
        text-align: left;

    }
    .features{
        display: flex;
        column-gap: 2rem;
    }
    #article-section{
        padding-top:3rem;
        padding-bottom:3rem;
    }
    .articles{
        display: flex;
        column-gap: 1rem;
        justify-content: center;
    }
    .article>img{
        
    }
    .article-container{
        width: 80%;
        margin: auto;
    }
    .footer-container{
        width: 80%;
        margin: auto;
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
    }
    .page-links ul{
        display: flex;
        column-gap: 2rem;
        align-items: center;
    }
    footer{
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
    .bottom-section small{
        color: hsl(233, 8%, 62%);
    }
}

